[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/Player/Player/UserInterface/Slots/ChestSlots.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Images/User interface/chest/chest-tab.png" type="Texture" id=2]
[ext_resource path="res://World/Player/Player/UserInterface/Chest/Chest.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/User interface/buttons-icons/x-button.png" type="Texture" id=4]
[ext_resource path="res://World/Player/Player/UserInterface/TrashCan/Trash.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Images/User interface/buttons-icons/x-button-pressed.png" type="Texture" id=6]
[ext_resource path="res://InventoryLogic/ItemDescription.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/HotbarInventorySlots.tscn" type="PackedScene" id=10]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/InventorySlots.tscn" type="PackedScene" id=11]

[node name="Chest" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 3 )

[node name="Trash" parent="." instance=ExtResource( 5 )]
margin_left = -640.0
margin_top = -360.0
margin_right = -586.0
margin_bottom = -360.0

[node name="ItemDescription" parent="." instance=ExtResource( 9 )]
visible = false

[node name="ChestSlotsImg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -360.0
margin_right = -214.0
margin_bottom = -120.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 4

[node name="InventorySlots" parent="." instance=ExtResource( 11 )]
margin_left = -298.0
margin_top = 123.0
margin_right = 323.0
margin_bottom = 240.0

[node name="HotbarInventorySlots" parent="." instance=ExtResource( 10 )]
margin_left = -298.0
margin_top = 63.0
margin_right = 323.0
margin_bottom = 117.0

[node name="ChestSlots" parent="." instance=ExtResource( 1 )]
margin_left = -298.0
margin_top = -183.0
margin_right = 296.0
margin_bottom = -9.0

[node name="ExitBtn" type="TextureButton" parent="."]
margin_left = 278.0
margin_top = -246.0
margin_right = 292.0
margin_bottom = -232.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="ExitBtn" to="." method="_on_ExitBtn_pressed"]
